--- a/Modules/javascript-racecar/public/cameras.css
+++ b/Modules/javascript-racecar/public/cameras.css
@@ -1,16 +1,16 @@
-img#camera0 {
+img#video1 {
     width: 320px;
     height: auto;
     /*width: auto;
     height: 240px;*/
 }
-img#camera1 {
+img#video2 {
     width: 320px;
     height: auto;
     /*width: auto;
     height: 240px;*/
 }
-img#camera2 {
+img#video3 {
     width: 320px;
     height: auto;
     /*width: auto;
